klass-model-converters/klass-compiler/src/test/resources/cool/klass/model/converter/compiler/error/user/DuplicateUserClassErrorTest.klass
package com.errors

user User1
{
    userId1: String key userId;
    userId2: String key userId;
}

user User2
{
    userId: String key userId;
}
